--- a/HealingArts/Collection.storyboard
+++ b/HealingArts/Collection.storyboard
@@ -20,31 +20,36 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="XQH-9X-VbT">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="c6U-mY-eDw">
-                                    <size key="itemSize" width="415.5" height="216"/>
+                                    <size key="itemSize" width="376" height="311"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="cellID" id="V68-uY-s9G" customClass="ArtworkCollectionViewCell" customModule="HealingArts" customModuleProvider="target">
-                                        <rect key="frame" x="-1" y="0.0" width="415.5" height="216"/>
+                                        <rect key="frame" x="19" y="0.0" width="376" height="311"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="415.5" height="216"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="376" height="311"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jZ3-Jj-Okb">
-                                                    <rect key="frame" x="0.0" y="0.0" width="416" height="164"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jZ3-Jj-Okb">
+                                                    <rect key="frame" x="0.0" y="0.0" width="376" height="329"/>
+                                                </imageView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TWt-iK-Kgv">
+                                                    <rect key="frame" x="0.0" y="249" width="376" height="62"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RKB-kz-Bd6">
-                                                    <rect key="frame" x="0.0" y="172" width="416" height="50"/>
+                                                    <rect key="frame" x="0.0" y="256" width="376" height="50"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="LPr-ma-Qea"/>
                                                     </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -52,8 +57,8 @@
                                         <constraints>
                                             <constraint firstItem="RKB-kz-Bd6" firstAttribute="leading" secondItem="jZ3-Jj-Okb" secondAttribute="leading" id="4zh-cb-QIi"/>
                                             <constraint firstItem="RKB-kz-Bd6" firstAttribute="leading" secondItem="V68-uY-s9G" secondAttribute="leading" id="IFW-Nw-ewN"/>
-                                            <constraint firstAttribute="bottomMargin" secondItem="RKB-kz-Bd6" secondAttribute="bottom" constant="-14" id="UhO-Dk-fmL"/>
-                                            <constraint firstItem="RKB-kz-Bd6" firstAttribute="top" secondItem="jZ3-Jj-Okb" secondAttribute="bottom" constant="8" symbolic="YES" id="jLv-95-T3i"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="RKB-kz-Bd6" secondAttribute="bottom" constant="-3" id="UhO-Dk-fmL"/>
+                                            <constraint firstItem="RKB-kz-Bd6" firstAttribute="top" secondItem="jZ3-Jj-Okb" secondAttribute="bottom" constant="-73" id="jLv-95-T3i"/>
                                             <constraint firstAttribute="trailing" secondItem="RKB-kz-Bd6" secondAttribute="trailing" id="lDw-JO-Cnc"/>
                                             <constraint firstItem="RKB-kz-Bd6" firstAttribute="centerX" secondItem="jZ3-Jj-Okb" secondAttribute="centerX" id="tT9-4g-gNY"/>
                                             <constraint firstItem="jZ3-Jj-Okb" firstAttribute="top" secondItem="V68-uY-s9G" secondAttribute="top" id="ybx-Sf-OZw"/>
@@ -70,7 +75,6 @@
                                 </connections>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="XQH-9X-VbT" firstAttribute="leading" secondItem="auM-au-yAe" secondAttribute="leading" id="e2Z-qw-2lU"/>
                             <constraint firstItem="auM-au-yAe" firstAttribute="bottom" secondItem="XQH-9X-VbT" secondAttribute="bottom" id="fvH-dq-BOG"/>
