--- a/HealingArts/About.storyboard
+++ b/HealingArts/About.storyboard
@@ -379,6 +379,9 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                         <state key="normal" title="MORE EVENTS">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
+                                        <connections>
+                                            <segue destination="xgd-Bb-c0y" kind="show" id="PJY-vW-XO1"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
@@ -418,6 +421,14 @@ The Healing Arts program will be comprised of a growing list of elements to help
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jIq-aG-MF9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3446" y="261"/>
+        </scene>
+        <!--Calendar-->
+        <scene sceneID="nlv-Vs-9Jn">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Calendar" id="xgd-Bb-c0y" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="MZg-W2-9em" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3688" y="1189"/>
         </scene>
         <!--Feedback-->
         <scene sceneID="hhU-Nx-n05">
