--- a/HealingArts/About.storyboard
+++ b/HealingArts/About.storyboard
@@ -164,16 +164,14 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chihulySanctuary" translatesAutoresizingMaskIntoConstraints="NO" id="JAX-Am-suE">
-                                                <rect key="frame" x="88" y="989" width="300" height="179"/>
+                                                <rect key="frame" x="88" y="989" width="294.5" height="179"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="300" id="81N-vO-0jP"/>
                                                     <constraint firstAttribute="height" constant="179" id="LlR-xc-57A"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="At the Fred &amp; Pamela Buffett Cancer Center, healing is more than medicine." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="ecl-jG-Fnz">
-                                                <rect key="frame" x="58" y="1203" width="287" height="79"/>
+                                                <rect key="frame" x="58" y="1203" width="283.5" height="79"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="287" id="J4R-Bh-4NR"/>
                                                     <constraint firstAttribute="height" constant="79" id="ZEd-pB-Wh8"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="19"/>
@@ -254,13 +252,11 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                 <color key="backgroundColor" red="0.95696391024683991" green="0.85520107989224803" blue="0.71581705537829987" alpha="0.67524614726027399" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="179" id="51d-WR-nIS"/>
-                                                    <constraint firstAttribute="width" constant="300" id="dtI-aI-msy"/>
                                                 </constraints>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chihulySanctuary" translatesAutoresizingMaskIntoConstraints="NO" id="ixV-5d-u33">
-                                                <rect key="frame" x="46" y="1008.5" width="298" height="179"/>
+                                                <rect key="frame" x="46" y="1008.5" width="294.5" height="179"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="298" id="nPV-Fa-wRe"/>
                                                     <constraint firstAttribute="height" constant="179" id="vYX-NQ-Sth"/>
                                                 </constraints>
                                             </imageView>
@@ -309,13 +305,12 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="18" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="UG9-yZ-Avg">
-                                                <rect key="frame" x="57" y="1282" width="319" height="274"/>
+                                                <rect key="frame" x="57" y="1282" width="315.5" height="274"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="274" id="gQJ-tf-orn"/>
-                                                    <constraint firstAttribute="width" constant="319" id="hD4-RJ-sUc"/>
                                                 </constraints>
-                                                <mutableString key="text">The Healing Arts program exists to create environments that support and comfort people through the diverse art opportunities and experiences.                                  
-                                                                              The Healing Arts program is composed of a growing list of elements to help reduce pain perception, anxiety, stress, loneliness and depression and to provide new insight and clarify feelings about a cancer diagnosis and treatment: therapeutic art and music programs for patients, diverse art collection throughout the cancer center, and rotating art exhibits.</mutableString>
+                                                <string key="text">The Healing Arts program exists to create environments that support and comfort people through the diverse art opportunities and experiences.                                  
+                                                                              The Healing Arts program is composed of a growing list of elements to help reduce pain perception, anxiety, stress, loneliness and depression and to provide new insight and clarify feelings about a cancer diagnosis and treatment: therapeutic art and music programs for patients, diverse art collection throughout the cancer center, and rotating art exhibits.</string>
                                                 <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="17"/>
                                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
@@ -400,10 +395,9 @@ The Healing Arts program will be comprised of a growing list of elements to help
                                                 </constraints>
                                             </imageView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fE8-N6-enM">
-                                                <rect key="frame" x="57" y="1571" width="319" height="30"/>
+                                                <rect key="frame" x="57" y="1571" width="315.5" height="30"/>
                                                 <color key="backgroundColor" red="0.84313725490196079" green="0.098039215686274508" blue="0.12549019607843137" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="319" id="Ncw-hv-Udq"/>
                                                     <constraint firstAttribute="height" constant="30" id="sEN-BM-8FS"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="BodoniSvtyTwoSCITCTT-Book" family="Bodoni 72 Smallcaps" pointSize="20"/>
