--- a/HealingArts/Calendar.storyboard
+++ b/HealingArts/Calendar.storyboard
@@ -10,20 +10,87 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Calendar View Controller-->
         <scene sceneID="mvu-le-lC7">
             <objects>
-                <viewController id="lJT-rT-anx" sceneMemberID="viewController">
+                <viewController id="lJT-rT-anx" customClass="CalendarViewController" customModule="HealingArts" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DCN-2p-P3A">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="86V-aq-dpf">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Xge-8b-9oW">
+                                    <size key="itemSize" width="376" height="311"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cellID" id="QTa-ej-Md7" customClass="CalendarCollectionViewCell" customModule="HealingArts" customModuleProvider="target">
+                                        <rect key="frame" x="19" y="0.0" width="376" height="311"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="376" height="311"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="newCancer" translatesAutoresizingMaskIntoConstraints="NO" id="dcx-9z-zmh">
+                                                    <rect key="frame" x="0.0" y="0.0" width="376" height="311"/>
+                                                </imageView>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d4u-sL-3Sd">
+                                                    <rect key="frame" x="0.0" y="249" width="376" height="62"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Write on me" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q6H-XX-peX">
+                                                    <rect key="frame" x="167" y="270" width="93" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="dcx-9z-zmh" secondAttribute="trailing" id="1HL-yC-aGD"/>
+                                            <constraint firstItem="dcx-9z-zmh" firstAttribute="leading" secondItem="QTa-ej-Md7" secondAttribute="leading" id="1Ko-W9-xRH"/>
+                                            <constraint firstItem="dcx-9z-zmh" firstAttribute="top" secondItem="QTa-ej-Md7" secondAttribute="top" id="2q3-Mc-FjD"/>
+                                            <constraint firstItem="dcx-9z-zmh" firstAttribute="leading" secondItem="QTa-ej-Md7" secondAttribute="leading" id="GXo-oN-xaf"/>
+                                            <constraint firstAttribute="bottom" secondItem="dcx-9z-zmh" secondAttribute="bottom" id="IhC-3g-8af"/>
+                                            <constraint firstItem="dcx-9z-zmh" firstAttribute="top" secondItem="QTa-ej-Md7" secondAttribute="top" id="caf-AV-vJj"/>
+                                            <constraint firstAttribute="trailing" secondItem="dcx-9z-zmh" secondAttribute="trailing" id="rvg-IO-g9n"/>
+                                            <constraint firstAttribute="bottom" secondItem="dcx-9z-zmh" secondAttribute="bottom" id="u1Q-RN-wVh"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="dcx-9z-zmh" id="Sqd-EO-pea"/>
+                                            <outlet property="textlabel" destination="Q6H-XX-peX" id="0pu-zS-mnx"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="lJT-rT-anx" id="igC-Gr-DTY"/>
+                                    <outlet property="delegate" destination="lJT-rT-anx" id="RB8-pN-QUv"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="gvN-gF-kKm" firstAttribute="trailing" secondItem="86V-aq-dpf" secondAttribute="trailing" id="DJA-GX-xxe"/>
+                            <constraint firstItem="86V-aq-dpf" firstAttribute="leading" secondItem="gvN-gF-kKm" secondAttribute="leading" id="EFA-CH-1L9"/>
+                            <constraint firstItem="gvN-gF-kKm" firstAttribute="bottom" secondItem="86V-aq-dpf" secondAttribute="bottom" id="Hc2-Zx-XTr"/>
+                            <constraint firstItem="86V-aq-dpf" firstAttribute="top" secondItem="gvN-gF-kKm" secondAttribute="top" id="OTk-YK-TlM"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="gvN-gF-kKm"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v4o-Jl-67Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="45" y="131"/>
+            <point key="canvasLocation" x="44.927536231884062" y="130.58035714285714"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="newCancer" width="950" height="839"/>
+    </resources>
 </document>
